clusters/apps/web/overlays/dev-cluster/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: open-case-filing-system
    app.kubernetes.io/component: api
  name: web
  namespace: dev
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      serviceAccountName: web-sa
      containers:
      - image: ghcr.io/federal-courts-software-factory/open-case-filing-system/web:sha-f42bcef
        name: web
        imagePullPolicy: Always
        ports:
